CloudAlpacas/salesforce/main/default/objects/Campaign/fields/Completed_Deliverable_Weight__c.field-meta.xml
<CustomField>
    <fullName>Completed_Deliverable_Weight__c</fullName>
    <description>이 캠페인에 속한 Campaign Deliverable 중 Status가 Completed인 항목들의 Weight 합계. Renewal_Campaign_Performance_Summary Flow가 이행률(fxDeliverableRate)을 계산할 때 분자로 사용합니다.</description>
    <inlineHelpText>자동 계산 필드입니다. 완료(Completed) 처리된 하위 Campaign Deliverable 레코드의 Weight만 더한 값입니다.</inlineHelpText>
    <label>완료된 이행 항목 가중치</label>
    <summarizedField>Campaign_Deliverable__c.Weight__c</summarizedField>
    <summaryFilterItems>
        <field>Campaign_Deliverable__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Deliverable__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>