CloudAlpacas/salesforce/main/default/objects/Campaign/recordTypes/Fan_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Fan_Campaign</fullName>
    <active>true</active>
    <label>Fan Campaign</label>
</RecordType>