CloudAlpacas/salesforce/main/default/objects/Campaign/recordTypes/SDO_Marketing_ParentCampaign.recordType-meta.xml
<RecordType>
    <fullName>SDO_Marketing_ParentCampaign</fullName>
    <active>true</active>
    <description>Top level Campaign</description>
    <label>Parent Campaign</label>
</RecordType>