CloudAlpacas/salesforce/main/default/objects/Campaign/recordTypes/Sponsorship_Collaboration.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_Collaboration</fullName>
    <active>true</active>
    <description>스폰서십 계약 이후 실행 캠페인과 참여 대상을 관리하기 위한 Campaign Record Type</description>
    <label>Sponsorship Collaboration</label>
</RecordType>