CloudAlpacas/salesforce/main/default/objects/Campaign/recordTypes/Sponsorship_Prospecting.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_Prospecting</fullName>
    <active>true</active>
    <description>잠재 스폰서사 담당자를 발굴하기 위한 Campaign Record Type (계약 체결 전, 리드 모집 단계)</description>
    <label>Sponsorship Prospecting</label>
</RecordType>