CloudAlpacas/salesforce/main/default/objects/Campaign/recordTypes/Sponsorship_Renewal.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_Renewal</fullName>
    <active>true</active>
    <description>기존 스폰서사와의 계약 갱신을 제안하기 위한 Campaign Record Type (계약 만료 임박 시 사용)</description>
    <label>Sponsorship Renewal</label>
</RecordType>