CloudAlpacas/salesforce/main/default/objects/Campaign/listViews/All_CA_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_CA_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Fan</value>
    </filters>
    <label>All CA Campaigns</label>
</ListView>