CloudAlpacas/salesforce/main/default/objects/Campaign/listViews/Fan_Campaign_List.listView-meta.xml
<ListView>
    <fullName>Fan_Campaign_List</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Fan_Campaign</value>
    </filters>
    <label>팬 캠페인 목록</label>
</ListView>