CloudAlpacas/salesforce/main/default/objects/Campaign/listViews/Sponsorship_Collaboration_List.listView-meta.xml
<ListView>
    <fullName>Sponsorship_Collaboration_List</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Sponsorship_Collaboration</value>
    </filters>
    <label>스폰서십 협업 캠페인 목록</label>
</ListView>