CloudAlpacas/salesforce/main/default/objects/Campaign/listViews/Sponsorship_Prospecting_List.listView-meta.xml
<ListView>
    <fullName>Sponsorship_Prospecting_List</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Sponsorship_Prospecting</value>
    </filters>
    <label>스폰서십 발굴 캠페인 목록</label>
</ListView>