CloudAlpacas/salesforce/main/default/objects/Campaign/listViews/Sponsorship_Renewal_List.listView-meta.xml
<ListView>
    <fullName>Sponsorship_Renewal_List</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Sponsorship_Renewal</value>
    </filters>
    <label>스폰서십 갱신 캠페인 목록</label>
</ListView>